<resources>
    <string name="app_name">Guess The Word</string>
    <string name="title_description">image showing the title of the main menu of the game</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid e-mail</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings related to the home menu -->
    <string name="create_game_button_name">CREATE GAME</string>
    <string name="find_game_button_name">FIND GAME</string>
    <string name="settings_button_name">SETTINGS</string>

    <!-- Strings related to the game -->
    <string name="game_chat_message_hint">Enter a guess or a message</string>

    <!-- Strings related to the creation of a new game menu -->
    <string name="prompt_room_name">Name of the room</string>
    <string-array name="languages">
        <item>English</item>
        <item>Italian</item>
        <item>German</item>
        <item>French</item>
    </string-array>

    <string-array name="player_numbers">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


</resources>