<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.menu.MenuActivity">

    <!--
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:src="@drawable/profile_button2"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:background="#00404040"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
   -->

    <ImageView
        android:id="@+id/menuTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:src="@drawable/title"
        android:contentDescription="@string/title_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/createGameButton"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuTitle"
        app:srcCompat="@drawable/empty_button" />

    <Button
        android:id="@+id/CreateGameText"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:text="@string/create_game_button_name"
        android:gravity="center"
        android:textSize="@dimen/main_button_font_size"
        android:typeface="serif"
        android:background="#00404040"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuTitle"/>

    <ImageView
        android:id="@+id/findGameButton"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createGameButton"
        app:srcCompat="@drawable/empty_button" />

    <Button
        android:id="@+id/findGameText"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/find_game_button_name"
        android:textSize="@dimen/main_button_font_size"
        android:typeface="serif"
        android:background="#00404040"
        android:onClick="goToFindGameActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createGameButton" />

    <ImageView
        android:id="@+id/settingsButton"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findGameButton"
        app:srcCompat="@drawable/empty_button" />

    <Button
        android:id="@+id/settingsText"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/settings_button_name"
        android:textSize="@dimen/main_button_font_size"
        android:typeface="serif"
        android:background="#00404040"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findGameButton" />

</androidx.constraintlayout.widget.ConstraintLayout>